--- a/teacher_log_in.html
+++ b/teacher_log_in.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section class="loginform">
-        <img src="TeacherLoginLogo.png" alt="" width="300px" height="150px">
+        <img src="TeacherLoginLogo.PNG" alt="" width="300px" height="150px">
         <form action="">
             <div class="int-area">
                 <input type="text" name="id" id="id"
