--- a/HSPE_Placement_Test.html
+++ b/HSPE_Placement_Test.html
@@ -9,10 +9,10 @@
             .container{
                 position: absolute;
                 display: flex;
-                left : 50%;
+                /*left : 50%;
                 top : 50%;
                 margin-left: -515px;
-                margin-top: -410px; 
+                margin-top: -410px; */
                 height: 820px;
                 width: 1040px;
                 border: solid;
