--- a/HSPE_Placement_Test.html
+++ b/HSPE_Placement_Test.html
@@ -82,13 +82,14 @@
                 background-color:#c42b00;
                 height: 10%;
                 width: 96%;
-                color : black
+                color : white;
             }
             #head {
                 position: relative;
                 display:block;
                 margin: 10px 10px 10px 10px;
                 background-color: coral;
+                color: white;
                 height: 10%;
                 width: 96%;
             }
