--- a/HSPE_Placement_Test.html
+++ b/HSPE_Placement_Test.html
@@ -1051,6 +1051,7 @@
                 if(phonics3count === tqnum){
                     button.innerHTML = `<input type="button" id="bodybutton" onclick="grammar1_done(${tqnum})" value="제출합니다.">`;
                     firstbody.innerHTML = '<div><font size="200px" color="red">밑에 제출하기 버튼을 누르세요.</font></div>';
+                    secondbody.innerHTML = '';
                 }
 
             }
@@ -1183,6 +1184,7 @@
                 if(phonics3count === tqnum){
                     button.innerHTML = `<input type="button" id="bodybutton" onclick="grammar2_done(${tqnum})" value="제출합니다.">`;
                     firstbody.innerHTML = '<div><font size="200px" color="red">밑에 제출하기 버튼을 누르세요.</font></div>';
+                    secondbody.innerHTML = '';
                 }
 
             }
@@ -1313,7 +1315,8 @@
 
                 if(phonics3count === tqnum){
                     button.innerHTML = `<input type="button" id="bodybutton" onclick="grammar3_done(${tqnum})" value="제출합니다.">`;
-                    body.innerHTML = '<div><font size="200px" color="red">밑에 제출하기 버튼을 누르세요.</font></div>';
+                    firstbody.innerHTML = '<div><font size="200px" color="red">밑에 제출하기 버튼을 누르세요.</font></div>';
+                    secondbody.innerHTML = '';
                 }
 
             }
