--- a/HSPE_Placement_Test.html
+++ b/HSPE_Placement_Test.html
@@ -5021,21 +5021,21 @@
                     }else{
                         if(sr_num_global === 2){
                             if(!aio1done){
-                                srt_test(1);
+                                srt_start(1);
                             }else{
                                 story_choice = "Story Town 1-1";
                                 choicemade = true;
                             }
                         }else if(sr_num_global === 3){
                             if(!aio2done){
-                                srt_test(2);
+                                srt_start(2);
                             }else{
                                 story_choice = "Story Town 2-1";
                                 choicemade = true;
                             }
                         }else{
                             if(!aio3done){
-                                srt_test(3);
+                                srt_start(3);
                             }else{
                                 story_choice = "Story Town 3-1";
                                 choicemade = true;
