--- a/HSPE_Placement_Test.html
+++ b/HSPE_Placement_Test.html
@@ -4860,7 +4860,7 @@
                 table = table + '교재선택 Test Level '+sr_num_global+'의 part 3 Test 점수 : ' + srpart3score + "점 <hr>";
                 table = table + '교재선택 Test Level '+sr_num_global+'의 part 4 Test 점수 : ' + srpart4score + "점 <hr>";
                 if(sr_num_global != 1){
-                    table = table + '교재선택 Test Level '+sr_num_global+'의 part 5 Test 점수 : ' + srpart5score + "% <hr>";
+                    table = table + '교재선택 Test Level '+sr_num_global+'의 part 5 Test 점수 : ' + srpart5score + "점 <hr>";
                 }else{
                     srpart5score = 0;
                 }
