--- a/HSPE_Placement_Test.html
+++ b/HSPE_Placement_Test.html
@@ -5149,13 +5149,14 @@
                     Placement Level Test
                 </div><br>
                 <div class="subject">
-                    Phonics : <input type="checkbox" class="checkbox" name="phonics" id="phonics" value="1"><br>
+                    <hr><div style="color : yellow">TEST 영역 선택</div><hr>
+                    Phonics : <input type="checkbox" class="checkbox" name="phonics" id="phonics" value="1"><hr>
                     Grammar : <input type="checkbox" class="checkbox" name="grammar" id='grammar' value="2"><br>
                     <select name="grammar" id="grammarnum">
                         <option value="0">Grammar Test 1</option>
                         <option value="1">Grammar Test 2</option>
                         <option value="2">Grammar Test 3</option>
-                    </select><br>
+                    </select><hr>
                     <!--G주관식(?) : <input type="checkbox" class="checkbox" name="grammar" id='grammar_type' value="3"><br>-->
                     Vocabulary : <input type="checkbox" class="checkbox" name="voca" id='voca' value="4"><br>
                     <select name="powervoca" id="pv">
@@ -5170,7 +5171,7 @@
                     <input type="text" class="wordnum"><br>
                     한글맞추기 : <input type="radio" class="checkbox" name="pv" id='pv_korean' value="5"><br>
                     영어맞추기 : <input type="radio" class="checkbox" name="pv" id='pv_english' value="6"><br>
-                    랜덤맞추기 : <input type="radio" class="checkbox" name="pv" id='pv_random' value="7" checked><br>
+                    랜덤맞추기 : <input type="radio" class="checkbox" name="pv" id='pv_random' value="7" checked><hr>
                     <!--V주관식(?) : <input type="checkbox" class="checkbox" name="pv_type" id='pv_type' value="8">-->
                     <!--Reading: <input type="checkbox" class="checkbox" name="reading" id='reading' value="9"><br>-->
                     중등: <input type="checkbox" class="checkbox" name="middle" id="middle" value="10"><br>
@@ -5181,7 +5182,7 @@
                         <option value="3">2학년 2학기</option>
                         <option value="4">3학년 1학기</option>
                         <option value="5">3학년 2학기</option>
-                    </select><br>
+                    </select><hr>
                     교재선택Test : <input type="checkbox" class="checkbox" name="rtst" id="rtst" value="11"><br>
                     <select name="rtst" id="rtstselect">
                         <option value="1">Level 1(Phonics)</option>
