--- a/HSPE_Placement_Test.html
+++ b/HSPE_Placement_Test.html
@@ -48,10 +48,11 @@
                 position: relative;
                 display: block;
                 width: 180px;
-                height: 50px;
+                height: 45px;
                 margin-left: 10px;
                 background-color: cornsilk;
                 color: darkblue;
+                padding : 5px 0px 0px 0px;
             }
 
             .subject{
@@ -68,6 +69,11 @@
                 width: 180px;
                 height:40px;
                 border-radius: 10px;
+            }
+
+            .subinput:hover{
+                background-color :rgb(255, 0, 0);
+                color :rgb(255, 255, 255);
             }
 
             .submit{
@@ -5147,7 +5153,7 @@
                 <div class="whatis">
                     한솔플러스영어<br>
                     Placement Level Test
-                </div><br>
+                </div>
                 <div class="subject">
                     <hr><div style="color : yellow">TEST 영역 선택</div><hr>
                     Phonics : <input type="checkbox" class="checkbox" name="phonics" id="phonics" value="1"><hr>
