--- a/HSPE_Placement_Test.html
+++ b/HSPE_Placement_Test.html
@@ -5156,15 +5156,15 @@
                 </div>
                 <div class="subject">
                     <hr><div style="color : yellow">TEST 영역 선택</div><hr>
-                    Phonics : <input type="checkbox" class="checkbox" name="phonics" id="phonics" value="1"><hr>
-                    Grammar : <input type="checkbox" class="checkbox" name="grammar" id='grammar' value="2"><br>
+                    > Phonics : <input type="checkbox" class="checkbox" name="phonics" id="phonics" value="1"><hr>
+                    > Grammar : <input type="checkbox" class="checkbox" name="grammar" id='grammar' value="2"><br>
                     <select name="grammar" id="grammarnum">
                         <option value="0">Grammar Test 1</option>
                         <option value="1">Grammar Test 2</option>
                         <option value="2">Grammar Test 3</option>
                     </select><hr>
                     <!--G주관식(?) : <input type="checkbox" class="checkbox" name="grammar" id='grammar_type' value="3"><br>-->
-                    Vocabulary : <input type="checkbox" class="checkbox" name="voca" id='voca' value="4"><br>
+                    > Vocabulary : <input type="checkbox" class="checkbox" name="voca" id='voca' value="4"><br>
                     <select name="powervoca" id="pv">
                         <option value="0">기본 Vocabulary</option>
                         <option value="1">Power Voca 1 (초저)</option>
@@ -5180,7 +5180,7 @@
                     랜덤맞추기 : <input type="radio" class="checkbox" name="pv" id='pv_random' value="7" checked><hr>
                     <!--V주관식(?) : <input type="checkbox" class="checkbox" name="pv_type" id='pv_type' value="8">-->
                     <!--Reading: <input type="checkbox" class="checkbox" name="reading" id='reading' value="9"><br>-->
-                    중등: <input type="checkbox" class="checkbox" name="middle" id="middle" value="10"><br>
+                    > 중등: <input type="checkbox" class="checkbox" name="middle" id="middle" value="10"><br>
                     <select name="middle" id="grade">
                         <option value="0">1학년 1학기</option>
                         <option value="1">1학년 2학기</option>
@@ -5189,7 +5189,7 @@
                         <option value="4">3학년 1학기</option>
                         <option value="5">3학년 2학기</option>
                     </select><hr>
-                    교재선택Test : <input type="checkbox" class="checkbox" name="rtst" id="rtst" value="11"><br>
+                    > 재선택Test : <input type="checkbox" class="checkbox" name="rtst" id="rtst" value="11"><br>
                     <select name="rtst" id="rtstselect">
                         <option value="1">Level 1(Phonics)</option>
                         <option value="2">Level 2(ST1/RT30)</option>
