--- a/HSPE_Placement_Test.html
+++ b/HSPE_Placement_Test.html
@@ -158,7 +158,7 @@
             }
 
             #capital {
-                font-size: 100px;                
+                font-size: 150px;                
             }
 
             #ab{
@@ -194,7 +194,7 @@
                 padding : 10px;
                 height: 150px;
                 font-family: 'Single Day', cursive;
-                font-size: 40px;
+                font-size: 20px;
             }
 
             #secondbody{
@@ -1014,9 +1014,6 @@
                 } else if(document.getElementById('voca').checked){                    
                     title.innerText = "Vocabulary Test를 시작합니다.";
                     voca_test();
-                } else if(document.getElementById('reading').checked){                    
-                    title.innerText = "Reading Test를 시작합니다.";
-                    reading_test();
                 } else if(document.getElementById('middle').checked){                    
                     title.innerText = "중등실력 Test를 시작합니다.";
                     middle_test();
@@ -5149,7 +5146,7 @@
     <body>
         <div class="container">
             <div class="select">           
-                <img src="TeacherLoginLogo.PNG" alt="" width="200px" height="100px"> <br><br>
+                <img src="TeacherLoginLogo.PNG" alt="" width="200px" height="100px"><br>
                 <div class="whatis">
                     한솔플러스영어<br>
                     Placement Level Test
@@ -5189,7 +5186,7 @@
                         <option value="4">3학년 1학기</option>
                         <option value="5">3학년 2학기</option>
                     </select><hr>
-                    > 재선택Test : <input type="checkbox" class="checkbox" name="rtst" id="rtst" value="11"><br>
+                    > 교재선택Test : <input type="checkbox" class="checkbox" name="rtst" id="rtst" value="11"><br>
                     <select name="rtst" id="rtstselect">
                         <option value="1">Level 1(Phonics)</option>
                         <option value="2">Level 2(ST1/RT30)</option>
