--- a/HSPE_Placement_Test.html
+++ b/HSPE_Placement_Test.html
@@ -158,7 +158,7 @@
             }
 
             #capital {
-                font-size: 150px;                
+                font-size: 70px;                
             }
 
             #ab{
@@ -225,6 +225,11 @@
                 background-color: rgb(204, 35, 23);
                 border-radius: 5px;
                 color : yellow;
+            }
+
+            #ef:hover{
+                background-color: yellow;
+                color:rgb(204,35,23);
             }
 
             #gh{
@@ -1603,8 +1608,8 @@
                                             let random = Math.floor(Math.random()*(total_pv_num))+1;
                                             if(document.getElementById('pv_korean').checked){
                                                 head.innerHTML = qnum+1+"번. 다음 주어진 영어단어의 한글뜻을 선택하세요";
-                                                prob = grammar_JSON[random].eng
-                                                firstbody.innerHTML = grammar_JSON[random].eng;
+                                                prob = grammar_JSON[random].eng;
+                                                firstbody.innerHTML = '<span id="capital">'+grammar_JSON[random].eng+'</span>';
                                                 answertext = grammar_JSON[random].kor;
                                                 grammar_JSON.splice(random,1);
                                                 //나머지 3가지 보기를 만듬
@@ -1621,7 +1626,7 @@
                                             }else if(document.getElementById('pv_english').checked){
                                                 head.innerHTML = qnum+1+"번. 다음 주어진 한글 뜻에 해당되는 영어단어를 선택하세요";
                                                 prob = grammar_JSON[random].kor
-                                                firstbody.innerHTML = prob;
+                                                firstbody.innerHTML = '<span id="capital">'+prob+'</span>';
                                                 answertext = grammar_JSON[random].eng;
                                                 grammar_JSON.splice(random,1);
                                                 //나머지 3가지 보기를 만듬
@@ -1640,7 +1645,7 @@
                                                 if(ke_random === 0){ //0이면 뜻 맞추기
                                                     head.innerHTML = qnum+1+"번. 다음 주어진 영어단어의 한글뜻을 선택하세요";
                                                     prob = grammar_JSON[random].eng;
-                                                    firstbody.innerHTML = grammar_JSON[random].eng;
+                                                    firstbody.innerHTML = '<span id="capital">'+grammar_JSON[random].eng+'</span>';
                                                     answertext = grammar_JSON[random].kor;
                                                     grammar_JSON.splice(random,1);
                                                     //나머지 3가지 보기를 만듬
@@ -1657,7 +1662,7 @@
                                                 }else{ // 1이면 영어 맞추기
                                                     head.innerHTML = qnum+1+"번. 다음 주어진 한글 뜻에 해당되는 영어단어를 선택하세요";
                                                     prob = grammar_JSON[random].kor;
-                                                    firstbody.innerHTML = grammar_JSON[random].kor;
+                                                    firstbody.innerHTML = '<span id="capital">'+grammar_JSON[random].kor+'</span>';
                                                     answertext = grammar_JSON[random].eng;
                                                     grammar_JSON.splice(random,1);                                            
                                                     //나머지 3가지 보기를 만듬
@@ -1766,8 +1771,8 @@
                                             let random = Math.floor(Math.random()*(total_pv_num))+1;
                                             if(document.getElementById('pv_korean').checked){
                                                 head.innerHTML = qnum+1+"번. 다음 주어진 영어단어의 한글뜻을 선택하세요";
-                                                prob = grammar_JSON[random].eng
-                                                firstbody.innerHTML = grammar_JSON[random].eng;
+                                                prob = grammar_JSON[random].eng;
+                                                firstbody.innerHTML = '<span id="capital">'+grammar_JSON[random].eng+'</span>';
                                                 answertext = grammar_JSON[random].kor;
                                                 grammar_JSON.splice(random,1);
                                                 //나머지 3가지 보기를 만듬
@@ -1784,7 +1789,7 @@
                                             }else if(document.getElementById('pv_english').checked){
                                                 head.innerHTML = qnum+1+"번. 다음 주어진 한글 뜻에 해당되는 영어단어를 선택하세요";
                                                 prob = grammar_JSON[random].kor
-                                                firstbody.innerHTML = prob;
+                                                firstbody.innerHTML = '<span id="capital">'+prob+'</span>';
                                                 answertext = grammar_JSON[random].eng;
                                                 grammar_JSON.splice(random,1);
                                                 //나머지 3가지 보기를 만듬
@@ -1803,7 +1808,7 @@
                                                 if(ke_random === 0){ //0이면 뜻 맞추기
                                                     head.innerHTML = qnum+1+"번. 다음 주어진 영어단어의 한글뜻을 선택하세요";
                                                     prob = grammar_JSON[random].eng;
-                                                    firstbody.innerHTML = grammar_JSON[random].eng;
+                                                    firstbody.innerHTML = '<span id="capital">'+grammar_JSON[random].eng+'</span>';
                                                     answertext = grammar_JSON[random].kor;
                                                     grammar_JSON.splice(random,1);
                                                     //나머지 3가지 보기를 만듬
@@ -1820,7 +1825,7 @@
                                                 }else{ // 1이면 영어 맞추기
                                                     head.innerHTML = qnum+1+"번. 다음 주어진 한글 뜻에 해당되는 영어단어를 선택하세요";
                                                     prob = grammar_JSON[random].kor;
-                                                    firstbody.innerHTML = grammar_JSON[random].kor;
+                                                    firstbody.innerHTML = '<span id="capital">'+grammar_JSON[random].kor+'</span>';
                                                     answertext = grammar_JSON[random].eng;
                                                     grammar_JSON.splice(random,1);                                            
                                                     //나머지 3가지 보기를 만듬
@@ -1977,8 +1982,8 @@
                                             let random = Math.floor(Math.random()*(total_pv_num))+1;
                                             if(document.getElementById('pv_korean').checked){
                                                 head.innerHTML = qnum+1+"번. 다음 주어진 영어단어의 한글뜻을 선택하세요";
-                                                prob = grammar_JSON[random].eng
-                                                firstbody.innerHTML = grammar_JSON[random].eng;
+                                                prob = grammar_JSON[random].eng;
+                                                firstbody.innerHTML = '<span id="capital">'+grammar_JSON[random].eng+'</span>';
                                                 answertext = grammar_JSON[random].kor;
                                                 grammar_JSON.splice(random,1);
                                                 //나머지 3가지 보기를 만듬
@@ -1995,7 +2000,7 @@
                                             }else if(document.getElementById('pv_english').checked){
                                                 head.innerHTML = qnum+1+"번. 다음 주어진 한글 뜻에 해당되는 영어단어를 선택하세요";
                                                 prob = grammar_JSON[random].kor
-                                                firstbody.innerHTML = prob;
+                                                firstbody.innerHTML = '<span id="capital">'+prob+'</span>';
                                                 answertext = grammar_JSON[random].eng;
                                                 grammar_JSON.splice(random,1);
                                                 //나머지 3가지 보기를 만듬
@@ -2014,7 +2019,7 @@
                                                 if(ke_random === 0){ //0이면 뜻 맞추기
                                                     head.innerHTML = qnum+1+"번. 다음 주어진 영어단어의 한글뜻을 선택하세요";
                                                     prob = grammar_JSON[random].eng;
-                                                    firstbody.innerHTML = grammar_JSON[random].eng;
+                                                    firstbody.innerHTML = '<span id="capital">'+grammar_JSON[random].eng+'</span>';
                                                     answertext = grammar_JSON[random].kor;
                                                     grammar_JSON.splice(random,1);
                                                     //나머지 3가지 보기를 만듬
@@ -2031,7 +2036,7 @@
                                                 }else{ // 1이면 영어 맞추기
                                                     head.innerHTML = qnum+1+"번. 다음 주어진 한글 뜻에 해당되는 영어단어를 선택하세요";
                                                     prob = grammar_JSON[random].kor;
-                                                    firstbody.innerHTML = grammar_JSON[random].kor;
+                                                    firstbody.innerHTML = '<span id="capital">'+grammar_JSON[random].kor+'</span>';
                                                     answertext = grammar_JSON[random].eng;
                                                     grammar_JSON.splice(random,1);                                            
                                                     //나머지 3가지 보기를 만듬
@@ -2141,8 +2146,8 @@
                                             let random = Math.floor(Math.random()*(total_pv_num))+1;
                                             if(document.getElementById('pv_korean').checked){
                                                 head.innerHTML = qnum+1+"번. 다음 주어진 영어단어의 한글뜻을 선택하세요";
-                                                prob = grammar_JSON[random].eng
-                                                firstbody.innerHTML = grammar_JSON[random].eng;
+                                                prob = grammar_JSON[random].eng;
+                                                firstbody.innerHTML = '<span id="capital">'+grammar_JSON[random].eng+'</span>';
                                                 answertext = grammar_JSON[random].kor;
                                                 grammar_JSON.splice(random,1);
                                                 //나머지 3가지 보기를 만듬
@@ -2159,7 +2164,7 @@
                                             }else if(document.getElementById('pv_english').checked){
                                                 head.innerHTML = qnum+1+"번. 다음 주어진 한글 뜻에 해당되는 영어단어를 선택하세요";
                                                 prob = grammar_JSON[random].kor
-                                                firstbody.innerHTML = prob;
+                                                firstbody.innerHTML = '<span id="capital">'+prob+'</span>';
                                                 answertext = grammar_JSON[random].eng;
                                                 grammar_JSON.splice(random,1);
                                                 //나머지 3가지 보기를 만듬
@@ -2178,7 +2183,7 @@
                                                 if(ke_random === 0){ //0이면 뜻 맞추기
                                                     head.innerHTML = qnum+1+"번. 다음 주어진 영어단어의 한글뜻을 선택하세요";
                                                     prob = grammar_JSON[random].eng;
-                                                    firstbody.innerHTML = grammar_JSON[random].eng;
+                                                    firstbody.innerHTML = '<span id="capital">'+grammar_JSON[random].eng+'</span>';
                                                     answertext = grammar_JSON[random].kor;
                                                     grammar_JSON.splice(random,1);
                                                     //나머지 3가지 보기를 만듬
@@ -2195,7 +2200,7 @@
                                                 }else{ // 1이면 영어 맞추기
                                                     head.innerHTML = qnum+1+"번. 다음 주어진 한글 뜻에 해당되는 영어단어를 선택하세요";
                                                     prob = grammar_JSON[random].kor;
-                                                    firstbody.innerHTML = grammar_JSON[random].kor;
+                                                    firstbody.innerHTML = '<span id="capital">'+grammar_JSON[random].kor+'</span>';
                                                     answertext = grammar_JSON[random].eng;
                                                     grammar_JSON.splice(random,1);                                            
                                                     //나머지 3가지 보기를 만듬
@@ -2289,7 +2294,7 @@
                 }   
                 }
             }
-      
+
             function pv2_start(){
                 const title = document.getElementById('title');
                 const head = document.getElementById('head');
@@ -2370,7 +2375,7 @@
                                             if(document.getElementById('pv_korean').checked){
                                                 head.innerHTML = qnum+1+"번. 다음 주어진 영어단어의 한글뜻을 선택하세요";
                                                 prob = grammar_JSON[random].eng
-                                                firstbody.innerHTML = grammar_JSON[random].eng;
+                                                firstbody.innerHTML = '<span id="capital">'+grammar_JSON[random].eng+'</span>';
                                                 answertext = grammar_JSON[random].kor;
                                                 grammar_JSON.splice(random,1);
                                                 //나머지 3가지 보기를 만듬
@@ -2387,7 +2392,7 @@
                                             }else if(document.getElementById('pv_english').checked){
                                                 head.innerHTML = qnum+1+"번. 다음 주어진 한글 뜻에 해당되는 영어단어를 선택하세요";
                                                 prob = grammar_JSON[random].kor
-                                                firstbody.innerHTML = prob;
+                                                firstbody.innerHTML = '<span id="capital">'+prob+'</span>';
                                                 answertext = grammar_JSON[random].eng;
                                                 grammar_JSON.splice(random,1);
                                                 //나머지 3가지 보기를 만듬
@@ -2406,7 +2411,7 @@
                                                 if(ke_random === 0){ //0이면 뜻 맞추기
                                                     head.innerHTML = qnum+1+"번. 다음 주어진 영어단어의 한글뜻을 선택하세요";
                                                     prob = grammar_JSON[random].eng;
-                                                    firstbody.innerHTML = grammar_JSON[random].eng;
+                                                    firstbody.innerHTML = '<span id="capital">'+grammar_JSON[random].eng+'</span>';
                                                     answertext = grammar_JSON[random].kor;
                                                     grammar_JSON.splice(random,1);
                                                     //나머지 3가지 보기를 만듬
@@ -2423,7 +2428,7 @@
                                                 }else{ // 1이면 영어 맞추기
                                                     head.innerHTML = qnum+1+"번. 다음 주어진 한글 뜻에 해당되는 영어단어를 선택하세요";
                                                     prob = grammar_JSON[random].kor;
-                                                    firstbody.innerHTML = grammar_JSON[random].kor;
+                                                    firstbody.innerHTML = '<span id="capital">'+grammar_JSON[random].kor+'</span>';
                                                     answertext = grammar_JSON[random].eng;
                                                     grammar_JSON.splice(random,1);                                            
                                                     //나머지 3가지 보기를 만듬
@@ -2532,7 +2537,7 @@
                                             let random = Math.floor(Math.random()*(total_pv_num))+1;
                                             if(document.getElementById('pv_korean').checked){
                                                 head.innerHTML = qnum+1+"번. 다음 주어진 영어단어의 한글뜻을 선택하세요";
-                                                prob = grammar_JSON[random].eng
+                                                prob = '<span id="capital">'+grammar_JSON[random].eng+'</span>';
                                                 firstbody.innerHTML = grammar_JSON[random].eng;
                                                 answertext = grammar_JSON[random].kor;
                                                 grammar_JSON.splice(random,1);
