--- a/HSPE_Placement_Test.html
+++ b/HSPE_Placement_Test.html
@@ -1554,7 +1554,7 @@
                 qnum = 0;
                 correct = 0;
 
-                title.innerText = "Voca Basic Leve Test를 시작합니다.";
+                title.innerText = "Voca Basic Level Test를 시작합니다.";
 
                 // test 파일 불러와서 json 파일로 만들기
                 let selectedFile = new XMLHttpRequest();
