--- a/HSPE_Placement_Test V2.html
+++ b/HSPE_Placement_Test V2.html
@@ -82,6 +82,11 @@
             </div>
             <div class="result" id="result">
                 <h1>RESULT</h1><hr>
+                <span>학생이름</span><input type="text" id="studentname"><br>
+                <span>학년</span><input type="text" id="studentgrade"><br>
+                <span>학원명</span><input type="text" id="classname"><br>
+                <span>학원전화번호</span><input type="text" id="classphone"><br>
+                <span>날짜</span><input type="text" id="testdate"><br><hr>
                 <input id="resultbutton" type="button" value="결과보기Print" onclick="printoutresult()"><hr>
             </div>
         </div>
