--- a/HSPE_Placement_Test V2.html
+++ b/HSPE_Placement_Test V2.html
@@ -87,7 +87,7 @@
                 <span>학원명</span><input type="text" id="classname"><br>
                 <span>학원전화번호</span><input type="text" id="classphone"><br>
                 <span>날짜</span><input type="text" id="testdate"><br><hr>
-                <input id="resultbutton" type="button" value="결과보기Print" onclick="printoutresult()"><hr>
+                <!--<input id="resultbutton" type="button" value="결과보기Print" onclick="printoutresult()"><hr>-->
             </div>
         </div>
     </body>
