--- a/HSPE_Placement_Test V3.html
+++ b/HSPE_Placement_Test V3.html
@@ -84,11 +84,11 @@
             <div id="result_all">
                 <h1>RESULT</h1><hr>
                 <div id="personal_info">
-                    <span>학생이름</span><input type="text" id="studentname"><br>
-                    <span>학년</span><input type="text" id="studentgrade"><br>
-                    <span>학원명</span><input type="text" id="classname"><br>
-                    <span>학원전화번호</span><input type="text" id="classphone"><br>
-                    <span>날짜</span><input type="text" id="testdate"><br><hr>
+                    <span>학생이름</span><br><input type="text" id="studentname"><br>
+                    <span>학년</span><br><input type="text" id="studentgrade"><br>
+                    <span>학원명</span><br><input type="text" id="classname"><br>
+                    <span>학원전화번호</span><br><input type="text" id="classphone"><br>
+                    <span>날짜</span><br><input type="text" id="testdate"><br><hr>
                 </div>
                 <div class="result" id="result">
                     <input id="resultbutton" type="button" value="결과보기Print" onclick="printoutresult()"><hr>
